[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SurvivalHUD.gd" id="1"]

[node name="SurvivalHUD" type="Control"]
anchor_left = 0.35
anchor_top = 0.02
anchor_right = 0.65
anchor_bottom = 0.18
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4

[node name="HealthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Health: 100"

[node name="BodyTempLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Body Temp: 37C"

[node name="AmbientTempLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Ambient: -4C"

[node name="TimeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Time: 08:00"

[node name="StatusLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
text = "Status: Warm"
